--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,3 @@
 <h1>Profile</h1>
-<p><strong>Name:</strong> <%= user.profile.displayName || user.name %></p>
-<p><strong>Email:</strong> <%= user.profile.username %></p>
+<p><span style="font-weight: bold;">Name:</span> <%= user.profile.displayName || user.name %></p>
+<p><span style="font-weight: bold;">Email:</span> <%= user.profile.username %></p>
