--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,3 @@
 <h1>Profile</h1>
-<p><span style="font-weight: bold;">Name:</span> <%= user.profile.displayName || user.name %></p>
-<p><span style="font-weight: bold;">Email:</span> <%= user.profile.username %></p>
+<p><h6 style="display: inline-block; margin: 0;">Name:</h6> <%= user.profile.displayName || user.name %></p>
+<p><h6 style="display: inline-block; margin: 0;">Email:</h6> <%= user.profile.username %></p>
