--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,12 @@
       .content {
         flex: 1;
       }
+      .team-heading {
+        display: inline-block;
+        font-weight: 600;
+        color: #2c3e50; 
+        margin-bottom: 1rem;
+      }
     </style>
   </head>
   <body>
