--- a/views/expenses.ejs
+++ b/views/expenses.ejs
@@ -1,5 +1,5 @@
 <h1><%= team.label %></h1>
-<div>Welcome to the <h6 style="display: inline-block; margin: 0;"><%= team.label %></h6> team page.</div>
+<div>Welcome to the <p class="team-heading"><%= team.label %></p> team page.</div>
 <br/>
 <% if (expenses && expenses.length > 0) { %>
 <h3>Expenses</h3>
