OIN focused app - Back to square one

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,5 +1,5 @@
 <h1>Dashboard</h1>
-<p>Welcome, <%= user.profile.name || 'User' %></p>
+<p>Welcome, <%= user.name || 'User' %></p>
 
 <h3>Your Teams</h3>
 <% if (team && team.length > 0) { %>
