--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <% if (user) { %>
-<h1>Welcome, <%= user.profile.name || 'User' %>!</h1>
+<h1>Welcome, <%= user.name || 'User' %>!</h1>
 <% } else { %>
 <h1>Welcome</h1>
 <% } %>
