--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,3 @@
 <h1>Profile</h1>
-<p><h6 style="display: inline-block; margin: 0;">Name:</h6> <%= user.profile.name %></p>
-<p><h6 style="display: inline-block; margin: 0;">Email:</h6> <%= user.profile.email %></p>
+<p><h6 style="display: inline-block; margin: 0;">Name:</h6> <%= user.name %></p>
+<p><h6 style="display: inline-block; margin: 0;">Email:</h6> <%= user.email %></p>
