--- a/views/expenses.ejs
+++ b/views/expenses.ejs
@@ -2,7 +2,7 @@
 <div>Welcome to the <p class="team-heading"><%= team.label %></p> team page.</div>
 <br/>
 <% if (expenses && expenses.length > 0) { %>
-<h3>Expenses</h3>
+<h2 style="font-size: 24px;">Expenses</h2>
 <table class="table table-bordered">
   <thead>
     <tr>
