--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,6 @@
 <h1>Dashboard</h1>
 <p>Welcome, <%= user.name || 'User' %></p>
-
-<h3>Your Teams</h3>
+<h2 style="font-size: 24px;">Your Teams</h2>
 <% if (team && team.length > 0) { %>
 <ul class="list-group">
   <% team.forEach(team => { %>
