--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,3 @@
 <h1>Profile</h1>
-<p><h6 style="display: inline-block; margin: 0;">Name:</h6> <%= user.name %></p>
-<p><h6 style="display: inline-block; margin: 0;">Email:</h6> <%= user.email %></p>
+<p><h2 style="display: inline-block; margin: 0; font-size: 16px;">Name:</h2> <%= user.name %></p>
+<p><h2 style="display: inline-block; margin: 0; font-size: 16px;">Email:</h2> <%= user.email %></p>
